# telebot

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  clear_db.py  docker-compose.yml  pipeline_userbot.session-shm  pipeline_userbot.session-wal  pyproject.toml
alembic/: env.py
config/: __init__.py  logging_config.py  settings.py
src/: __init__.py
src/bot/: __init__.py  admin_bot.py  handlers.py
src/db/: __init__.py  models.py  session.py
src/scrapers/: __init__.py  regex_engine.py  userbot_listener.py
src/services/: __init__.py  file_io_engine.py  links_bot_client.py  native_batch_engine.py  presentation.py  progress_tracker.py  state_machine.py  tmdb_client.py
src/workers/: __init__.py  arq_worker.py  io_worker.py  metadata_worker.py  presentation_worker.py
systemd/: tg-pipeline-bot.service  tg-pipeline-worker@.service
tests/: __init__.py  test_file_io_engine.py  test_links_bot_client.py  test_native_batch_engine.py  test_pipeline_e2e.py  test_presentation.py  test_progress_tracker.py  test_regex_engine.py  test_state_machine.py  test_tmdb_client.py
